<?xml version="1.0"?>
<package>
  <name>create_dataset</name>
  <version>0.6.0</version>
  <description>Save images with control and imu data.</description>

  <maintainer email="kkelchtermans@gmail.com">Klaas Kelchtermans</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Graylin Trevor Jay</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
