<?xml version="1.0"?>
<package>
  <name>create_dataset</name>
  <version>0.6.0</version>
  <description>Save images with control, imu and potentially depth data.</description>

  <maintainer email="kkelchtermans@gmail.com">Klaas Kelchtermans</maintainer>

  <license>BSD</license>

  <author>Klaas Kelchtermans</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
